# grpc-showcase

./: notes.md  slides.odp
examples/ex0/: .gitignore  CMakeLists.txt  main.cc  main.cc.template  protobuf-anatomy.sh  simple-message  simple.proto  simple.proto.template
examples/ex1/: .gitignore  calc.proto  calc.py  client.py  compile.sh  server.py
examples/protobuf-boilerplate/: .gitignore  boilerplate  boilerplate.js  boilerplate.proto  boilerplate.py
examples/protobuf-simple-message/: CMakeLists.txt  simple-message  simple-message.cc.template
examples/simple-message/: README.md  simple-message.py
examples/simple-message-cpp/: simple-message.proto.template
